# movie-ticket-booking-system-10th-grade-GSDimitrov22

./: CMakeLists.txt  main.cpp
include/: Booking.h  Cinema.h  Hall.h  Movie.h  MovieManager.h  NotificationManager.h  Payment.h  Seat.h  Show.h  User.h
